<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_32"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/button_back" />

            <TextView
                android:id="@+id/textViewEditContactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/choose_async_settings"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/titleTextSize"
                android:layout_marginStart="@dimen/bigMargin"/>

    </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/radioGroupSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/defaultPadding"
        app:layout_constraintTop_toBottomOf="@id/toolbarSettings">

        <RadioButton
            android:id="@+id/radioButtonThreadPoolExecutorHandler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/threadpoolexecutor_handler"
            android:textSize="@dimen/defaultTextSize"
            android:checked="true"
            android:paddingHorizontal="@dimen/defaultPadding"
            android:layout_marginBottom="@dimen/defaultMargin"/>

        <RadioButton
            android:id="@+id/radioButtonCompletableFutureThreadPoolExecutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/completablefuture_threadpoolexecutor"
            android:textSize="@dimen/defaultTextSize"
            android:paddingHorizontal="@dimen/defaultPadding"
            android:layout_marginBottom="@dimen/defaultMargin"/>

        <RadioButton
            android:id="@+id/radioButtonRxJava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rxjava"
            android:textSize="@dimen/defaultTextSize"
            android:checked="false"
            android:paddingHorizontal="@dimen/defaultPadding"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>